# pptx-compare

./: CHANGELOG.md  LICENSE  README.md  TODO  pyproject.toml  ruff.toml
.github/ISSUE_TEMPLATE/: bug.yaml  feature.yaml
src/my_minimal_project/: feature.py
src/pptx_compare/: feature.py
tests/: feature_test.py
