[build-system]
requires = ["setuptools>=42", "setuptools-scm"]
build-backend = "setuptools.build_meta"

####################
# MARK:  Project
####################

[project]
name = "pptx-compare"
description = "Compare PowerPoint presentations"
keywords = ["example", "minimal", "project"]
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Peter Mizsak", email = "peter.mizsak@econengineering.com" }]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["readme", "version"]

dependencies = []

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[project.urls]
Homepage = "https://github.com/econengineeringgit/pptx-compare"
Documentation = "https://github.com/econengineeringgit/pptx-compare"
Source = "https://github.com/econengineeringgit/pptx-compare"
Tracker = "https://github.com/econengineeringgit/pptx-compare/issues"

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }
version = { attr = "pptx_compare.__version__" }


[tool.setuptools.packages.find]
where = ["src"]


####################
# MARK:  mypy
####################
[tool.mypy]

ignore_missing_imports = true
warn_unreachable = true
warn_unused_ignores = true
pretty = true # Nice formatting for error messages